# DF1_to_MQTT

./: README.md  package-lock.json  package.json
esp32-version/: .gitignore  QUICKSTART_ANTIGRAVITY.md  README.md  compile_commands.json  platformio.ini
esp32-version/.cache/clangd/index/: Alignment.hpp.472811D46F73880B.idx  ArduinoJson.h.6BF99AC0ACC64E69.idx  ArduinoJson.hpp.B65578F1D8DEA6B6.idx  ArduinoStreamReader.hpp.76ABED70A912EC8C.idx  ArduinoStringReader.hpp.0899FCA4D7AD6F97.idx  ArduinoStringWriter.hpp.BF6AFAEE38869A2C.idx  BasicJsonDocument.hpp.08B35D474FD50F97.idx  CollectionData.hpp.26E2C1E8462B6330.idx  CollectionImpl.hpp.BAD8C71051F60CEC.idx  Config.cpp.E6D5AA03A6ED2566.idx  Config.h.771250C46E5E2317.idx  Configuration.hpp.09D8011D7F398E20.idx  Converter.hpp.47B0B9CD9086471E.idx  ConverterImpl.hpp.AA36ACC534757C42.idx  CountingDecorator.hpp.B08B6662A78A2986.idx  DF1Protocol.cpp.76C4E81856C9D015.idx  DF1Protocol.h.8BA04EDD5625FDD5.idx  DeserializationError.hpp.C5F2CEE4266F1619.idx  (+122 more)
esp32-version/data/: config.json
esp32-version/include/: Config.h  DF1Protocol.h  MQTTManager.h
esp32-version/src/: Config.cpp  DF1Protocol.cpp  MQTTManager.cpp  main.cpp
rust-version/: .gitignore  Cargo.toml  README.md  build.sh  df1-mqtt-gateway.service  install-service.sh
rust-version/config/: default.json
rust-version/src/: config.rs  df1_protocol.rs  main.rs  mqtt_client.rs
src/: df1-service.ts  index.ts  mqtt-service.ts
src/interfaces/: config.interface.ts  tag.interface.ts
src/protocols/: df1-protocol.ts
src/utils/: data-converter.ts
