[package]
name = "df1-mqtt-gateway"
version = "2.0.0"
edition = "2021"
authors = ["José B. Salamanca Vargas <jose.bsalamanca@makesens.com.co>"]
description = "DF1 to MQTT Gateway - High-performance Rust implementation for Raspberry Pi"
license = "ISC"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"

# MQTT client
rumqttc = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
bytes = "1.5"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
